recursion.cons.min.Min.scala.error
Compilation error:
Min:20: error: type mismatch;
 found   : List[Int]
 required: Int
      return(a::t);
              ^